manifests/adguard/04-adguard-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-lb
  namespace: adguard
  annotations:
    metallb.universe.tf/allow-shared-ip: "adguard-home"
spec:
  type: LoadBalancer
  # IP will be auto-assigned from MetalLB pool (10.0.200.1-250)
  selector:
    app.kubernetes.io/name: adguard-home
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
---
