manifests/adguard/05-adguard-service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adguard-home
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
